# oryn

./: .actrc  .dockerignore  .gitignore  AGENTS.md  BUILD_VERIFICATION.md  CLAUDE.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_CONTEXTUAL.md  Cargo.toml  DEBUG_WIZARD.md  DISTRIBUTION-READY.md  DOWNLOAD_UX.md  Dockerfile.chrome-ext  INSTALLATION.md  MANUAL_TEST.md  OFFSCREEN_ARCHITECTURE.md  OFFSCREEN_DEBUG_SUMMARY.md  ORYN-R-TESTING.md  ORYN_W.md  README.md  RESOLVER_GAPS.md  REVIEW_ISSUES.md  SCANNER-SYNC-SUMMARY.md  SCANNER-SYNC.md  TESTING-CHECKLIST.md  TEST_RESULTS.md  debug_scanner_response.js  package-lock.json  package.json  test-diagnostic-logs.js  test-download.js  test-full-flow.js  test-local-bundles.js  test-offscreen-debug.js  test-offscreen-status.js  test-verify-download.js  test-wait-for-download.js  test-wizard.js  test_chrome_ai.html  test_chrome_ai_availability.html  (+1 more)
crates/lscope/: Cargo.toml
crates/lscope-r/: Cargo.toml
crates/lscope-r/src/: backend.rs  main.rs  server.rs
crates/lscope-r/tests/: lemma_scripts_e2e.rs  remote_e2e_test.rs  server_test.rs
crates/lscope/src/: main.rs  repl.rs
crates/oryn/: Cargo.toml
crates/oryn-common/: Cargo.toml
crates/oryn-common/src/: error_mapping.rs  formatter.rs  lib.rs  protocol.rs  resolver.rs  translator.rs
crates/oryn-common/src/error/: backend_error.rs  mod.rs
crates/oryn-common/src/intent/: define_parser.rs  mod.rs  registry.rs  verifier.rs
crates/oryn-core/: Cargo.toml
crates/oryn-core/src/: api.rs  ast.rs  backend.rs  command.rs  error_mapping.rs  executor.rs  formatter.rs  lib.rs  normalizer.rs  oil.pest  parser.rs  protocol.rs  resolver.rs  translator.rs  wasm.rs
crates/oryn-core/src/config/: schema.rs
crates/oryn-core/src/formatter/: mod.rs
crates/oryn-core/src/intent/: define_parser.rs  definition.rs  executor.rs  loader.rs  mapper.rs  mod.rs  registry.rs  schema.rs  session.rs  verifier.rs
crates/oryn-core/src/learner/: mod.rs  storage.rs  (+3 more)
crates/oryn-core/tests/: agent_experience_test.rs  association_test.rs  basic_test.rs  builtin_intent_test.rs  config_test.rs  core_tests.rs  definition_test.rs  executor_checkpoint_test.rs  executor_routing_test.rs  executor_test.rs  flow_control_test.rs  flow_test.rs  formatter_intent_test.rs  formatter_test.rs  learner_test.rs  loader_test.rs  pack_integration.rs  pack_test.rs  parser_full_coverage.rs  parser_full_suite.rs  parser_phase6.rs  protocol_test.rs  relational_target_test.rs  resolution_inference_test.rs  session_intent_test.rs  translator_test.rs  use_cases.rs  vectors_test.rs  verifier_test.rs
crates/oryn-e/: Cargo.toml
crates/oryn-e/src/: backend.rs  cog.rs  lib.rs  main.rs  webdriver.rs
crates/oryn-e/tests/: embedded_test.rs  weston_test.rs
crates/oryn-engine/: Cargo.toml
crates/oryn-engine/src/: backend.rs  cli.rs  executor.rs  lib.rs  parser.rs
crates/oryn-engine/tests/: agent_experience_test.rs  association_test.rs  builtin_intent_test.rs  config_test.rs  core_tests.rs  definition_test.rs  executor_checkpoint_test.rs  executor_routing_test.rs  executor_test.rs  flow_control_test.rs  flow_test.rs  formatter_intent_test.rs  formatter_test.rs  learner_test.rs  loader_test.rs  pack_integration.rs  pack_test.rs  parser_full_coverage.rs  parser_full_suite.rs  parser_phase6.rs  protocol_test.rs  relational_target_test.rs  resolution_inference_test.rs  session_intent_test.rs  translator_test.rs  use_cases.rs  verifier_test.rs
crates/oryn-h/: Cargo.toml
crates/oryn-h/src/: backend.rs  cdp.rs  features.rs  inject.rs  lib.rs  main.rs
crates/oryn-h/tests/: e2e_integration.rs  headless_test.rs
crates/oryn-parser/: Cargo.toml
crates/oryn-parser/src/: ast.rs  lib.rs  normalizer.rs  oil.pest  parser.rs  resolver.rs  translator.rs
crates/oryn-parser/tests/: basic_test.rs  process_test.rs  vectors_test.rs
crates/oryn-r/: Cargo.toml
crates/oryn-r/src/: backend.rs  lib.rs  main.rs  server.rs
crates/oryn-r/tests/: lemma_scripts_e2e.rs  oil_scripts_e2e.rs  remote_e2e_test.rs  server_test.rs
crates/oryn/src/: main.rs  repl.rs
intentgym/: README.md  SPEC-INTENTGYM.md  debug_scanner_response.js  pyproject.toml
intentgym/configs/: miniwob_100ep.yaml  miniwob_100ep_visible_debug.yaml  miniwob_5ep.yaml  miniwob_5ep_safe.yaml  miniwob_5ep_stable.yaml  miniwob_gpt5.yaml  miniwob_litellm.yaml  miniwob_test.yaml  test_run.yaml
intentgym/docs/: API_REFERENCE.md  USER_GUIDE.md
intentgym/prompts/: few_shot.yaml  minimal.yaml  oil_instructions_v2.yml  oil_instructions_v3.yml  oil_standard.yaml  verbose_cot.yaml
intentgym/results/: miniwob_gpt5.json  test_run.json
intentgym/scripts/: debug_oryn.py  run_miniwob.sh
intentgym/src/intentgym/: cli.py
intentgym/tests/: test_runner_recovery.py
oryn-python/: README.md  pyproject.toml
oryn-python/src/oryn/: __init__.py  client.py  config.py  discovery.py  errors.py  parser.py  protocol.py  script.py  sync.py  types.py
oryn-python/tests/: __init__.py  test_config.py  test_discovery.py  test_parser.py  test_subprocess_transport.py
oryn-python/tests/e2e/: __init__.py  conftest.py  test_oil_scripts.py
website/: mkdocs.yml  pyproject.toml
website/docs/: index.md
website/docs/concepts/: architecture.md  backend-modes.md  index.md  intent-engine.md  intent-language.md  scanner-protocol.md
website/docs/getting-started/: cli-reference.md  index.md  installation.md  quickstart.md
website/docs/guides/: basic-navigation.md  custom-intents.md  form-interactions.md  index.md  multi-page-flows.md  troubleshooting.md
website/docs/integrations/: google-adk.md  index.md  intentgym.md  python-sdk.md  remote-extension.md  wasm-extension.md
website/docs/reference/: command-coverage.md  configuration.md  error-codes.md  glossary.md  index.md  intent-commands.md  scanner-commands.md  truth-and-trust.md
website/site/: 404.html  index.html  sitemap.xml
website/site/concepts/: index.html
website/site/getting-started/: index.html
website/site/guides/: index.html
website/site/integrations/: index.html
website/site/reference/: index.html
website/site/search/: search_index.json
(+386 files in other folders)
