[tool.poetry]
name = "oryn-docs"
version = "0.1.0"
description = "Oryn documentation website"
authors = ["Dragonscale"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6"
mkdocs-material = "^9.5"
pymdown-extensions = "^10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
