[package]
name = "lscope"
version = "0.1.0"
edition = "2021"

[dependencies]
lscope-core = { path = "../lscope-core" }
lscope-h = { path = "../lscope-h" }
lscope-e = { path = "../lscope-e" }
lscope-r = { path = "../lscope-r" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
