[package]
name = "oryn-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
serde_yaml = "0.9"
glob = "0.3"
async-recursion = "1.0"
regex = "1"
strsim = "0.11.1"
url = "2.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
