[package]
name = "oryn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"
regex = "1.10"
strsim = "0.11.1"
oryn-common = { path = "../oryn-common" }
async-trait = "0.1"
async-recursion = "1.0"

[lib]
name = "oryn_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
