[package]
name = "oryn-e"
version = "0.1.0"
edition = "2021"

[dependencies]
oryn-core = { path = "../oryn-core" }
oryn-scanner = { path = "../oryn-scanner" }
fantoccini = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = "0.12"

[dev-dependencies]
serial_test = "3"
