[package]
name = "oryn-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
oryn-common = { path = "../oryn-common" }
oryn-core = { path = "../oryn-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
serde_yaml = "0.9"
glob = "0.3"
async-recursion = "1.0"
regex = "1"
dirs = "6.0.0"
tokio = { version = "1.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "time",
    "process",
] }
strsim = "0.11.1"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
