[package]
name = "oryn-h"
version = "0.1.0"
edition = "2024"

[dependencies]
oryn-engine = { path = "../oryn-engine" }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
serial_test = "3"
