[package]
name = "oryn-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"
regex = "1.10"
oryn-common = { path = "../oryn-common" }

[lib]
name = "oryn_parser"
path = "src/lib.rs"
