[package]
name = "oryn-r"
version = "0.1.0"
edition = "2021"

[dependencies]
oryn-core = { path = "../oryn-core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
base64 = "0.22"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
anyhow = "1.0"
