[package]
name = "oryn"
version = "0.1.0"
edition = "2024"

[dependencies]
oryn-core = { path = "../oryn-core" }
oryn-h = { path = "../oryn-h" }
oryn-e = { path = "../oryn-e" }
oryn-r = { path = "../oryn-r" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0.149"
url = "2.5"
dirs = "4.0"
